<resources>
    <string name="app_name">PrincipleAnimationInterpolatorTest</string>
    <string name="app_name_for_humans">Principle Animation Interpolator Tester</string>

    <string name="main_menu_title">Choose an interpolator</string>
    <string name="main_menu_item_bezier">Bezier Curve</string>
    <string name="main_menu_item_spring">Spring</string>

    <string name="call_to_action">Tap to animate\n\nLong tap to reset</string>

    <string name="button_visualize">Visualize</string>
    <string name="button_test">Test</string>

    <string name="bezier_interpolator_title">Bezier Curve Interpolator</string>

    <string name="bezier_coord_px1">PX 1</string>
    <string name="bezier_coord_py1">PY 1</string>
    <string name="bezier_coord_px2">PX 2</string>
    <string name="bezier_coord_py2">PY 2</string>
    <string name="bezier_coord_px1_default">0.25</string>
    <string name="bezier_coord_py1_default">0.1</string>
    <string name="bezier_coord_px2_default">0.25</string>
    <string name="bezier_coord_py2_default">1</string>

    <string name="bezier_duration">Duration</string>
    <string name="bezier_duration_default">1000</string>


    <string name="spring_interpolator_title">Spring Interpolator</string>

    <string name="spring_tension">Tension</string>
    <string name="spring_friction">Friction</string>
    <string name="spring_duration">Duration</string>
</resources>
