<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_title"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_large"
        android:layout_marginBottom="@dimen/size_large"
        android:layout_gravity="center_horizontal">
        <ImageButton
            android:id="@+id/thumb_button_bezier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bezier_curve_thumb"
            android:scaleType="fitCenter"
            android:elevation="@dimen/elevation_big_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_menu_item_bezier"
            android:textSize="@dimen/font_size_large"
            android:clickable="false"
            android:focusable="false"
            android:elevation="@dimen/elevation_big_button"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_large"
        android:layout_gravity="center_horizontal">
        <ImageButton
            android:id="@+id/thumb_button_spring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/spring_curve_thumb"
            android:scaleType="fitCenter"
            android:elevation="@dimen/elevation_big_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_menu_item_spring"
            android:textSize="@dimen/font_size_large"
            android:clickable="false"
            android:focusable="false"
            android:elevation="@dimen/elevation_big_button"/>
    </FrameLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>